# TaskFrappe

./: README.md  pyproject.toml
custom_tasks/: api.py  dummy_data.py  hooks.py  manufacturing_workflow.py  modules.txt
custom_tasks/custom_tasks/dashboard_chart/su1_custom/: su1_custom.json
custom_tasks/custom_tasks/dashboard_chart_source/funnel/: funnel.js  funnel.json
custom_tasks/custom_tasks/dashboard_chart_source/purchase_funnel/: purchase_funnel.json
custom_tasks/custom_tasks/doctype/gate_pass_item/: gate_pass_item.json  gate_pass_item.py
custom_tasks/custom_tasks/doctype/gatepass/: gatepass.js  gatepass.json  gatepass.py  test_gatepass.py
custom_tasks/custom_tasks/doctype/vehicles_brand/: test_vehicles_brand.py  vehicles_brand.js  vehicles_brand.json  vehicles_brand.py
custom_tasks/custom_tasks/doctype/vehicles_x/: test_vehicles_x.py  vehicles_x.js  vehicles_x.json  vehicles_x.py
custom_tasks/custom_tasks/report/active_vehicles/: active_vehicles.json
custom_tasks/custom_tasks/report/custom_stock_ledger/: custom_stock_ledger.js  custom_stock_ledger.json  custom_stock_ledger.py
custom_tasks/custom_tasks/report/custom_stock_ledger_report/: custom_stock_ledger_report.js  custom_stock_ledger_report.json  custom_stock_ledger_report.py
custom_tasks/custom_tasks/report/vehicles_querry_report/: vehicles_querry_report.json
